Added README.md + Added SimpleJwt for authentication purposes + Configured Open API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-filter = "^24.2"
 djangorestframework-simplejwt = "^5.3.1"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
+drf-yasg = "^1.21.7"
 
 [tool.poetry.group.dev.dependencies]
 django-jazzmin = "^3.0.0"
