--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework-simplejwt = "^5.3.1"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
 drf-yasg = "^1.21.7"
+django-redis = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 django-jazzmin = "^3.0.0"
